# Resume-Builder-

./: .gitignore  Final_resume.tex  README.md  keyword_matcher.py  laTex_resume.tex  main.py  master_resume.txt  pyproject.toml  template  test.py  uk_standards.txt  upload_resume.py
chroma_db/: chroma.sqlite3
config/: prompts.py
data/: requirements.txt
data/app/: brain.py  skeleton.py  workflow.py
src/agents/: collector.py  formatter.py  reviewer.py
src/orchestrator/: supervisor.py
src/tools/: formatting_tools.py  wrapper_tools.py
src/utils/: llm.py
templates/latex/: modern_cv.tex
