[project]
name = "production-ready"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community",
    "faiss-cpu",
    "sentence-transformers",  # For embeddings
    "python-dotenv",
    "langchain",
    "langchain-google-genai"
]
